implement function and test

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prop-val-replace",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Replace field values for a nested object",
   "main": "index.js",
   "scripts": {
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/zlkca/prop-val-replace/issues"
   },
-  "homepage": "https://github.com/zlkca/prop-val-replace#readme"
+  "homepage": "https://github.com/zlkca/prop-val-replace#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.1"
+  }
 }
